<resources>
    <string name="app_name">Calculator</string>

    // buttons
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>


    // textviews
    <string name="calculator_title">Calculator \n please enter two numbers</string>
    <string name="operation">please enter the operation you want to do</string>

    // toasts
    <string name="toast">please enter a valid number</string>
    <string name="divide_by_zero">can\'t divide by zero</string>

</resources>